--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,6 +1,7 @@
 <ul>
     $for(posts)$
         <li>
+            <i class="fa-li fa fa-code"></i>
             <a href="$url$">$title$</a> - $date$
         </li>
     $endfor$
